[package]
authors = ["Marc Brinkmann <git@marcbrinkmann.de>"]
description = "Linux SocketCAN library. Send and receive CAN frames via CAN bus on Linux."
documentation = "https://docs.rs/socketcan"
license = "MIT"
name = "socketcan"
repository = "https://github.com/mbr/socketcan-rs"
version = "2.0.0"

[dependencies]
byte_conv = "0.1.1"
hex = "^0.2"
itertools = "^0.4"
libc = "^0.2"
nix = "^0.5"

[features]
vcan_tests = []

[[example]]
name = "write_once"